--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,10 +6,10 @@ COPY ./fastApi_backend/requirements.txt /code/requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-COPY ./fastApi_backend/ /code/app
+COPY ./fastApi_backend/ /code/fastApi_backend
 
-WORKDIR /code/app/fastApi_backend
+WORKDIR /code/fastApi_backend
 
 EXPOSE 8000
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
