bugfix#28.1 changes in git composen yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "2.2"
 services:
   backend_service:
     build:
-      context: ./backend/
+      context: ./backend
       dockerfile: Dockerfile
     container_name: fast_api_container
     ports:
