feature#17: added github actions, added deplayment yamls for deploy app on kubernettes, changes in gitignore, changes in Docker file to build on kubernetters app

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,angular,node,python,react,venv,virtualenv,yarn
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,angular,node,python,react,venv,virtualenv,yarn
 
+
+###VSC###
+.vscode
+.editorconfig
+
 ### Angular ###
 ## Angular ##
 # compiled output
