--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:alpine
-
+FROM node:18 AS build
 WORKDIR /usr/src/app
-
-COPY . /usr/src/app
-
-RUN npm install -g @angular/cli
-
+COPY package.json /usr/src/app/
 RUN npm install
+COPY . /usr/src/app
+RUN npm run build --prod
 
+FROM nginx:alpine
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /usr/src/app/dist/board-meetings /usr/share/nginx/html
 EXPOSE 4200
-
-CMD ["ng", "serve", "--host", "0.0.0.0"]
+CMD ["nginx", "-g", "daemon off;"]
