--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start-proxy": "ng serve --proxy-config proxy.conf.json"
+    "start-proxy": "ng serve --proxy-config proxy.conf.json",
+    "start-dev-proxy": "ng serve --proxy-config dev.proxy.conf.json"
   },
   "private": true,
   "dependencies": {
