bugfix#44: changes in about component to be open as a part of menu to a children routing which blocked change rute until about windows is open, changes in deployment-db.yaml and mian.py

--- a/database/deployment-db.yaml
+++ b/database/deployment-db.yaml
@@ -43,7 +43,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: mariadb-meetings
-                key: MARIADB_PASSWORD
+                key: MARIADB_USER
           - name: MARIADB_PASSWORD
             valueFrom:
               secretKeyRef:
